--- a/styles/styles.css
+++ b/styles/styles.css
@@ -160,4 +160,29 @@ nav{
     display: flex;
 }
 
- 
+.user1{
+    display: flex;
+    color: blue;
+    font-weight: bold;
+    justify-content: space-around;
+}
+
+
+.footer{
+    padding: 130px 230px;
+    display: flex;
+    gap: 100px;
+}
+
+.footer-column{
+    width: 50%;
+}
+
+footer input[type="text"]{
+    height: 64px;
+    border-radius: 5px;
+    background-color:white;
+    color: red;
+    width: 100%;
+    display: block;
+}
