--- a/styles/styles.css
+++ b/styles/styles.css
@@ -172,17 +172,47 @@ nav{
     padding: 130px 230px;
     display: flex;
     gap: 100px;
+   
+}
+.Title{
+    color: violet;
+    font-weight: bold;
+    font-size: 30px;
 }
 
 .footer-column{
     width: 50%;
 }
 
-footer input[type="text"]{
+footer input[type="text"], footer input[type="email"], footer textarea
+{
     height: 64px;
     border-radius: 5px;
     background-color:white;
     color: red;
     width: 100%;
     display: block;
+    padding: 10px 20px;
+    margin-bottom: 24px;
+     
 }
+
+.logo{
+    color: blue;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+}
+ .ready{
+    color: grey;
+    font-size: 14px;
+    justify-content: center;
+    text-align: center;
+
+ }
+
+ .short{
+    color: grey;
+    font-size: 12px;
+    text-align: center;
+ }
