--- a/styles/styles.css
+++ b/styles/styles.css
@@ -39,6 +39,14 @@ nav{
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition:cubic-bezier(0.39, 0.575, 0.565, 1);
+    background-color 0.4s ease;
+    box-shadow: 0 4 12 rgba(0 0 0 0.15);
+
+ }
+ .btn-primary:active{
+    background-color: cadetblue;
+    transform: scale(1.05);
  }
 
  .banner-content {
@@ -66,6 +74,13 @@ nav{
   padding: 15px 30px;
   font-size: 16px;
   cursor: pointer;
+  transition: cubic-bezier(0.445, 0.05, 0.55, 0.95)
+  background-color 0.4s ease;
+  box-shadow: 0 4px 12px rgba(0 0 0 0.15);
+ }
+ .banner-button1:active{
+    background-color: aquamarine;
+    transform: scale(0.93);
  }
 
  .action{
@@ -101,10 +116,77 @@ nav{
     padding: 12px 25px;
     border: none;
     border-radius: 5px;
+    transition: cubic-bezier(0.445, 0.05, 0.55, 0.95);
+    box-shadow: 0 4px 12px rgba(0 0 0 0.15);
+
+  }
+  .act-btn:active{
+    background-color: yellow;
+    transform: scale(1.05);
   }
   .active{
     max-width: 520px;
   }
+
+  .img{
+    justify-content: center;
+  }
+
+  .say{
+    text-align: center;
+    color: darkorchid;
+  }
+  .stars{
+    color: yellow;
+  }
+ .vertex{
+    display: flex;
+    border-style: outset;
+    gap:200px;
+    padding: 10px 70px;
+ }
+
+ .design{
+    justify-content:left;
+ }
+ .template{
+    justify-content: center;
+ }
+
+ .studio{
+    justify-content: right;
+ }
+
+.Afroza{
+    justify-content: center;
+    padding: 30px 150px;
+}
+ .Ready{
+  font-weight: bold;
+  color: aqua;
+  text-align: center;
+ }
+
+.hi{
+    color: grey;
+    font-size: 14px;
+    text-align: center;
+}
+
+.free{
+    color: darkorchid;
+    background-color: bisque;
+    cursor: pointer; 
+    justify-content: center;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 20px;
+
+  }
+
+ .bigimg{
+    max-width: 100%;
+ }
 
   .Users
   {
@@ -122,12 +204,27 @@ nav{
     font-weight: bold;
     color: black;
     text-align: center;
+    padding: 30px;
   }
 .user-info
 {
     color: blue;
     font-size: 80px;
     font-weight: bold;
+}
+
+.strong{
+    display: flex;
+    font-weight: bold;
+    font-size: 80px;
+    color: blue;
+    justify-content: space-around;
+}
+.paragraph{
+    display: flex;
+    color: black;
+    font-size: 20px;
+    justify-content: space-around;
 }
 
 .active-users{
@@ -159,6 +256,7 @@ nav{
 .sec1{
     display: flex;
 }
+
 
 .user1{
     display: flex;
